2001-02-10  Lars J. Aas  <larsa@sim.no>

	* automake.in ($MACRO_PATTERN): Include '@' in name regex.
	(&canonicalize): New. Includes '@' in canonical range.
	(&check_canonical_spelling, &handle_programs, &handle_libraries,
	&handle_ltlibraries, &handle_texinfo): Use &canonicalize.

2001-02-10  Raja R Harinath  <harinath@cs.umn.edu>

	* automake.in (handle_configure): Revert part of 
	'2001-02-04  Kevin Ryde <user42@zip.com.au>'.  Don't 
	set CONFIG_COMMANDS explicitly.

2001-02-09  Raja R Harinath  <harinath@cs.umn.edu>

	* depcomp (gcc3): Propagate exit code.

2001-02-09  Lars J. Aas  <larsa@sim.no>

	* header.am (install-@DIR@HEADERS): s,?!NOBASE?,?!BASE?, (typo)

2001-02-09  Tom Tromey  <tromey@redhat.com>

	Clean up maintainer-check warnings:
	* Makefile.am (maintainer-check): Ignore comment lines in CDPATH
	check.
	* automake.in (handle_dist_worker): Removed redundant `my $xform'.

2001-02-09  Akim Demaille  <akim@epita.fr>

	* automake.in (&file_contents): Remove a dead branch.
	
2001-02-09  Akim Demaille  <akim@epita.fr>

	* automake.in (&transform): Use `my', not `local'.
	(&transform_cond): New.
	(&get_object_extension, &handle_texinfo, &handle_tags)
	(&handle_dist_worker, &handle_dist, &add_depend2, &handle_clean)
	(&handle_tests_dejagnu): Use it.
	* texinfos.am, lisp.am, header.am, dist.am, distdir.am, depend2.am
	* dejagnu.am, data.am, clean.am: Adjust to the new syntax.

2001-02-09  Akim Demaille  <akim@epita.fr>

	* automake.in: Various formatting changes, and modernization of
	Perl constructs.
	(&backname): New.
	(&handle_configure, define_standard_variables): Use it.

2001-02-08  Tom Tromey  <tromey@redhat.com>

	* automake.in (file_contents): Only add $actions if any are
	found.  Fixes new failure in pr87.test.

2001-02-08  Pavel Roskin  <proski@gnu.org>

	* tests/pr87.test: Check foo/Makfile.in after it is created.

2001-02-08  Tom Tromey  <tromey@redhat.com>

	* tests/pr87.test: Added check for blank line after `.c.o' rule.