@@ -1,3 +1,8 @@
+2001-02-10  Tom Tromey  <tromey@redhat.com>
+
+	* tests/condlib.test: New file.
+	* tests/Makefile.am (TESTS): Added new file.
+
 2001-02-10  Lars J. Aas  <larsa@sim.no>
 
 	* automake.in ($MACRO_PATTERN): Include '@' in name regex.
